--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,4 +3,6 @@ hr {
     height: 0;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    margin-top: 4px;
+    padding-top: 8px
 }
