--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -6,3 +6,11 @@ hr {
     margin-top: 4px;
     padding-top: 8px
 }
+
+.main-content {
+    background-color: "white";
+    padding: "8px 16px 8px 16px";
+    max-width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
+}
