--- a/src/app/components/Article/LikePanel/style.css
+++ b/src/app/components/Article/LikePanel/style.css
@@ -1,3 +1,28 @@
-.clap-style {
 
+.sticky {
+    position: fixed;
+    top: 100px;
+    width: 16.66%;
+}
+
+.panel {
+    text-align: center;
+}
+
+@media (max-width: 992px) {
+    .panel {
+        position: initial;
+        top: initial;
+        width: initial;
+    }
+}
+
+
+.login-link:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.login-link {
+    color: #4078c0;
 }
